basic UI structure

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.msz.bowling.bowling_app">
    <application
-        android:label="bowling_app"
+        android:label="Bowling"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
