--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  firebase_core: ^1.16.0
+  firebase_database: ^9.0.13
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
