--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.16.0
   firebase_database: ^9.0.13
   syncfusion_flutter_datepicker: 19.4.56
+  select_dialog: ^2.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
